# music-interpolation

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
music_interpolation/: __main__.py  audio.py  beats.py  encodec_interpolation.py  madmom.py  musicgen.py
notebooks/: music-interpolation.ipynb
tests/: test_encodec_interpolation.py
