[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99

[tool.mypy]
exclude = "build"
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 99

[tool.pyright]
reportUnknownMemberType = false

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = true
xfail_strict = true
