[metadata]
name = music-interpolation
version = 0.1.0
description = Mix between music tracks using machine learning
author = John Hurliman
author_email = jhurliman@jhurliman.org
url = https://github.com/jhurliman/music-interpolation
license = MIT

[options]
include_package_data = True
install_requires =
    audiocraft
    transformers
packages = find:
python_requires = >=3.10

[options.package_data]
music-interpolation = py.typed

[flake8]
max-line-length = 100
exclude =
  **/build/**,
# E203 is not PEP8 compliant, W503/Q000 conflict with black formatting
extend-ignore = E203 W503 Q000
